--- a/spring/resources/templates/index.html
+++ b/spring/resources/templates/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     Hello World
 </body>
 </html>
